--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,30 @@
 {
-  "compilerOptions": {
-    "target": "es2020",                  // modern enough for n8n-core
-    "module": "commonjs",                // produce require()-style modules
-    "rootDir": ".", 
-    "outDir": "dist",              // emit JS alongside
-    "declaration": true,                 // generate .d.ts for your nodes
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true,                // ⛔️ ignore errors in node_modules
-    "resolveJsonModule": true
-  },
-  "include": ["nodes", "credentials"],
-  "exclude": ["node_modules", "dist"]    // don’t touch these
+	"compilerOptions": {
+		"strict": true,
+		"module": "commonjs",
+		"moduleResolution": "node",
+		"target": "es2019",
+		"lib": ["es2019", "es2020", "es2022.error"],
+		"removeComments": true,
+		"useUnknownInCatchVariables": false,
+		"forceConsistentCasingInFileNames": true,
+		"noImplicitAny": true,
+		"noImplicitReturns": true,
+		"noUnusedLocals": true,
+		"strictNullChecks": true,
+		"preserveConstEnums": true,
+		"esModuleInterop": true,
+		"resolveJsonModule": true,
+		"incremental": true,
+		"declaration": true,
+		"sourceMap": true,
+		"skipLibCheck": true,
+		"outDir": "./dist/",
+	},
+	"include": [
+		"credentials/**/*",
+		"nodes/**/*",
+		"nodes/**/*.json",
+		"package.json",
+	],
 }
