--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
   },
   "peerDependencies": {
     "n8n-workflow": "*"
+  },
+  "dependencies": {
+    "n8n-nodes-swiftgum-trigger": "file:/Users/arthurbonnecarrere/Coding/pdf-automation/n8n-nodes-swiftgum"
   }
 }
